------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------
February 25 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added two-headed moose
	
February 24 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added ghosts
	
February 20 2003 Timo Kiviluoto <sonor@phpoint.fi> and
				 Heikki Sairanen<heikki.sairanen@phpoint.net>

	* All items, characters and materials have been attached to some god

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added support for transparent non-walkable tiles
	* Added support for monsters walking through walls
	* Monster generation works now a little better (maybe)

February 20 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added cans filled with mushroom flesh. 
	
February 17 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Dark wizards added 

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Gcc 3.2.1 now compiles the game correctly and without warnings
	* Optimization
	* Removed subbitmap support from FeLib; it was complicated and useless
	* Added some info about materials to SecretKnowledge
	* Diamond plate mails and other objects made of transparent materials now look
	  better in inventory and panel

February 17 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* A small bug in the key handling code fixed
	* A fatal bug in the script code corrected

February 17 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* A fatal bug added by the last commit corrected
	* A fatal bug in Mellis's pray effect corrected (thanks to the anonymous
	  SourceForge user who reported it)
	* Created a much better way of handling random script variables; they are now
	  presented in form "min:max" instead of "min + rand%(max-min+1)" and are