@@ -6,6 +6,12 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+February 26 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Zombies are more picky about the brains they want (atleast that's what they say now)
+	* Petrus's, angels' and genies' bodyparts disappear when severed.
+	* Zombies pick up and use heads if they lack one
+
 February 25 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Added two-headed moose
